--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,4 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 android.injected.testOnly=false
-android.enableResourceOptimizations=false
+#android.enableResourceOptimizations=false
