修改个人中心-权益中心默认不显示 修改个人中心链接从后台获取 添加第三方权限库

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -184,6 +184,7 @@ dependencies {
     implementation project(path: ':form_verify')
     implementation project(path: ':library_update')
     implementation project(path: ':dialog')
+    implementation project(path: ':permissionx')
 
     implementation "androidx.multidex:multidex:2.0.1"
     implementation 'com.facebook.fresco:fresco:0.10.0'
