个人中心添加充值按钮 web关闭标识改为ky808 发布1.0.2版本

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.kayu.business_car_owner">
 
-    <uses-permission android:name="android.permission.CALL_PHONE" /> <!-- <uses-permission android:name="android.permission.CAMERA" /> &lt;!&ndash; <uses-permission android:name="com.kayu.management.RECV_MYBC" /> &ndash;&gt; -->
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" /> <!-- 读取SD卡的权限:打开相册选取图片所必须的权限 -->
