--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,7 +105,7 @@ android {
             jniDebuggable true
 //            applicationIdSuffix ".release"
             buildConfigField("boolean", "LOG_DEBUG", "true")//配置Log日志
-            buildConfigField "String", "BASE_URL", '"https://www.ws101.cn/sslm/spv/"'  //正式环境
+            buildConfigField "String", "BASE_URL", '"https://www.sslm01.com/sslm/spv/"'  //正式环境
 //            buildConfigField "String", "BASE_URL", '"https://www.ky808.cn/test/carfriend/"'  //测试环境
         }
         debug {
@@ -117,7 +117,7 @@ android {
 //            applicationIdSuffix ".debug"
             buildConfigField("boolean", "LOG_DEBUG", "true")//配置Log日志
 //            buildConfigField "String", "BASE_URL", '"https://www.ky808.cn/test/carfriend/"'  //测试环境
-            buildConfigField "String", "BASE_URL", '"https://www.ws101.cn/sslm/spv/"'  //正式环境
+            buildConfigField "String", "BASE_URL", '"https://www.sslm01.com/sslm/spv/"'  //正式环境
 //            buildConfigField "String", "BASE_URL", '"http://192.168.3.31:9090/sslm/spv/"'  //测试环境
 
         }
