--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" /> <!-- 读取SD卡的权限:打开相册选取图片所必须的权限 -->
-    <!-- <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> -->
+<!--     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> -->
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
     <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" /> <!-- 用于进行网络定位 -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- 用于访问GPS定位 -->
@@ -17,8 +17,8 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" /> <!-- 用于访问网络，网络定位需要上网 -->
     <uses-permission android:name="android.permission.INTERNET" />
     <!--用于读取手机当前的状态-->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"
-        tools:node="merge"/>
+<!--    <uses-permission android:name="android.permission.READ_PHONE_STATE"-->
+<!--        tools:node="merge"/>-->
     <!--用于申请调用A-GPS模块-->
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"/>
     <!--如果设置了target >= 28 如果需要启动后台定位则必须声明这个权限-->
@@ -27,13 +27,13 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
 
 
-    <uses-permission android:name="android.permission.WRITE_SETTINGS"
-        tools:node="merge"
-        tools:ignore="ProtectedPermissions" />
-    <uses-permission android:name="android.permission.BLUETOOTH"
-        tools:node="merge"/>
-    <uses-permission android:name="android.permission.READ_SETTINGS"
-        tools:node="merge"/>
+<!--    <uses-permission android:name="android.permission.WRITE_SETTINGS"-->
+<!--        tools:node="merge"-->
+<!--        tools:ignore="ProtectedPermissions" />-->
+<!--    <uses-permission android:name="android.permission.BLUETOOTH"-->
+<!--        tools:node="merge"/>-->
+<!--    <uses-permission android:name="android.permission.READ_SETTINGS"-->
+<!--        tools:node="merge"/>-->
     <!--    <uses-permission android:name="android.permission.GET_TASKS"-->
     <!--        tools:node="merge"/>&lt;!&ndash; 如果有视频相关的广告且使用textureView播放，请务必添加，否则黑屏 &ndash;&gt;-->
     <!--    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" /> &lt;!&ndash; 可选权限 &ndash;&gt;-->
@@ -199,11 +199,11 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
-        <activity
-            android:name=".activity.RewardVideoActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity" />
+<!--        <activity-->
+<!--            android:name=".activity.RewardVideoActivity"-->
+<!--            android:configChanges="orientation|keyboardHidden|screenSize"-->
+<!--            android:screenOrientation="portrait"-->
+<!--            tools:ignore="LockedOrientationActivity" />-->
         <activity
             android:name=".activity.SplashActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -232,24 +232,25 @@
             android:launchMode="singleTask"
             android:screenOrientation="unspecified"
             tools:ignore="Instantiatable,LockedOrientationActivity" />
-        <activity
-            android:name="com.cmic.sso.sdk.activity.OAuthActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:launchMode="singleTop"
-            android:screenOrientation="unspecified"
-            tools:ignore="MissingClass" /> <!-- required -->
-        <activity
-            android:name="com.cmic.sso.sdk.activity.LoginAuthActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:launchMode="singleTop"
-            android:screenOrientation="unspecified"
-            android:theme="@style/ActivityDialogStyleaa" /> <!-- Required -->
-        <activity
-            android:name="cn.jiguang.verifysdk.CtLoginActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:launchMode="singleTop"
-            android:screenOrientation="unspecified"
-            android:theme="@style/ActivityDialogStyleaa" /> <!-- Required -->
+
+<!--        <activity-->
+<!--            android:name="com.cmic.sso.sdk.activity.OAuthActivity"-->
+<!--            android:configChanges="orientation|keyboardHidden|screenSize"-->
+<!--            android:launchMode="singleTop"-->
+<!--            android:screenOrientation="unspecified"-->
+<!--            tools:ignore="MissingClass" /> &lt;!&ndash; required &ndash;&gt;-->
+<!--        <activity-->
+<!--            android:name="com.cmic.sso.sdk.activity.LoginAuthActivity"-->
+<!--            android:configChanges="orientation|keyboardHidden|screenSize"-->
+<!--            android:launchMode="singleTop"-->
+<!--            android:screenOrientation="unspecified"-->
+<!--            android:theme="@style/ActivityDialogStyleaa" /> &lt;!&ndash; Required &ndash;&gt;-->
+<!--        <activity-->
+<!--            android:name="cn.jiguang.verifysdk.CtLoginActivity"-->
+<!--            android:configChanges="orientation|keyboardHidden|screenSize"-->
+<!--            android:launchMode="singleTop"-->
+<!--            android:screenOrientation="unspecified"-->
+<!--            android:theme="@style/ActivityDialogStyleaa" /> &lt;!&ndash; Required &ndash;&gt;-->
 
         <meta-data
             android:name="JPUSH_APPKEY"
@@ -262,39 +263,39 @@
             android:name="com.amap.api.location.APSService"
             android:foregroundServiceType="location" />
 
-        <service
-            android:name="com.qq.e.comm.DownloadService"
-            android:exported="false" >
-        </service>
-        <activity
-            android:name="com.qq.e.ads.ADActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize" >
-        </activity>
-        <!-- 腾讯广告 -->
-        <provider
-            android:name="com.qq.e.comm.GDTFileProvider"
-            android:authorities="${applicationId}.gdt.fileprovider"
-            android:exported="false"
-            android:grantUriPermissions="true">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/gdt_file_path" />
-        </provider>
+<!--        <service-->
+<!--            android:name="com.qq.e.comm.DownloadService"-->
+<!--            android:exported="false" >-->
+<!--        </service>-->
+<!--        <activity-->
+<!--            android:name="com.qq.e.ads.ADActivity"-->
+<!--            android:configChanges="keyboard|keyboardHidden|orientation|screenSize" >-->
+<!--        </activity>-->
+<!--        &lt;!&ndash; 腾讯广告 &ndash;&gt;-->
+<!--        <provider-->
+<!--            android:name="com.qq.e.comm.GDTFileProvider"-->
+<!--            android:authorities="${applicationId}.gdt.fileprovider"-->
+<!--            android:exported="false"-->
+<!--            android:grantUriPermissions="true">-->
+<!--            <meta-data-->
+<!--                android:name="android.support.FILE_PROVIDER_PATHS"-->
+<!--                android:resource="@xml/gdt_file_path" />-->
+<!--        </provider>-->
 
-        <!-- 穿山甲广告 -->
-        <provider
-            android:name="com.bytedance.sdk.openadsdk.TTFileProvider"
-            android:authorities="${applicationId}.TTFileProvider"
-            android:exported="false"
-            android:grantUriPermissions="true">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths" />
-        </provider>
-        <provider
-            android:name="com.bytedance.sdk.openadsdk.multipro.TTMultiProvider"
-            android:authorities="${applicationId}.TTMultiProvider"
-            android:exported="false" />
+<!--        &lt;!&ndash; 穿山甲广告 &ndash;&gt;-->
+<!--        <provider-->
+<!--            android:name="com.bytedance.sdk.openadsdk.TTFileProvider"-->
+<!--            android:authorities="${applicationId}.TTFileProvider"-->
+<!--            android:exported="false"-->
+<!--            android:grantUriPermissions="true">-->
+<!--            <meta-data-->
+<!--                android:name="android.support.FILE_PROVIDER_PATHS"-->
+<!--                android:resource="@xml/file_paths" />-->
+<!--        </provider>-->
+<!--        <provider-->
+<!--            android:name="com.bytedance.sdk.openadsdk.multipro.TTMultiProvider"-->
+<!--            android:authorities="${applicationId}.TTMultiProvider"-->
+<!--            android:exported="false" />-->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
