--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
         versionName "1.0.3"
         ndk {
             //选择要添加的对应 cpu 类型的 .so 库。
-            abiFilters  'armeabi-v8a', 'armeabi', 'armeabi-v7a'
+            abiFilters  'arm64-v8a', 'armeabi', 'armeabi-v7a'
         }
         manifestPlaceholders = [
                 JPUSH_PKGNAME : applicationId,
