修改webview软键盘弹出内容不跟随弹出，更新1.0.7版本

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -121,7 +121,8 @@
             android:name="com.amap.api.v2.apikey"
             android:value="1e16d9c1ded9f32d6710b35c5ae0307c" />
 
-        <activity android:name=".activity.WebViewActivity" />
+        <activity android:name=".activity.WebViewActivity"
+            android:windowSoftInputMode="adjustPan|adjustResize"/>
         <activity android:name=".activity.AgentWebViewActivity" />
         <activity
             android:name=".activity.ActivationActivity"
