--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ if (isWindows()){
 }
 
 android {
-    compileSdk 32
+    compileSdk 31
 
     defaultConfig {
         applicationId "com.kayu.business_car_owner"
@@ -59,6 +59,14 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+
+    packagingOptions {
+        exclude "/META-INF/*.kotlin_module"
+        exclude "**/kotlin/**"
+        exclude "**/*.txt"
+        exclude "**/*.xml"
+        exclude "**/*.properties"
     }
 
     signingConfigs {
@@ -128,7 +136,7 @@ android {
 dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'], exclude: [])
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
@@ -147,20 +155,12 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.hjq:toast:8.8'
-    implementation 'com.just.agentweb:agentweb-androidx:4.1.4'
 
-//    implementation 'com.pangle.cn:ads-sdk-pro:4.0.0.6'// 穿山甲广告
-//    implementation 'com.qq.e.union:union:4.410.1280' // 普通版本  腾讯广告
-
-//    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
-//    implementation 'com.kongzue.dialog_v3x:dialog:3.2.4'
     implementation 'com.daimajia.numberprogressbar:library:1.4@aar'
-//    implementation 'com.github.GrenderG:Toasty:1.4.2'
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
 
     implementation "com.squareup.leakcanary:leakcanary-android-no-op:1.5.4"
 
-//    implementation 'cn.jiguang.sdk:jverification:2.6.7'  // 此处以JCore 2.1.2 版本为例。
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.24'
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:5.5.8'
 
@@ -169,11 +169,11 @@ dependencies {
 
     implementation  'com.scwang.smart:refresh-layout-kernel:2.0.1'      //核心必须依赖
     implementation  'com.scwang.smart:refresh-header-classics:2.0.1'    //经典刷新头
-    implementation  'com.scwang.smart:refresh-header-radar:2.0.1'       //雷达刷新头
-    implementation  'com.scwang.smart:refresh-header-falsify:2.0.1'     //虚拟刷新头
-    implementation  'com.scwang.smart:refresh-header-material:2.0.1'    //谷歌刷新头
-    implementation  'com.scwang.smart:refresh-header-two-level:2.0.1'   //二级刷新头
-    implementation  'com.scwang.smart:refresh-footer-ball:2.0.1'        //球脉冲加载
+//    implementation  'com.scwang.smart:refresh-header-radar:2.0.1'       //雷达刷新头
+//    implementation  'com.scwang.smart:refresh-header-falsify:2.0.1'     //虚拟刷新头
+//    implementation  'com.scwang.smart:refresh-header-material:2.0.1'    //谷歌刷新头
+//    implementation  'com.scwang.smart:refresh-header-two-level:2.0.1'   //二级刷新头
+//    implementation  'com.scwang.smart:refresh-footer-ball:2.0.1'        //球脉冲加载
     implementation  'com.scwang.smart:refresh-footer-classics:2.0.1'    //经典加载
 
     implementation project(':banner')
