--- a/dialog/build.gradle
+++ b/dialog/build.gradle
@@ -5,11 +5,11 @@ group = "com.kongzue.dialog_v3x"
 version = "3.2.4.1"
 
 android {
-    compileSdkVersion 30
+    compileSdk 31
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 83
         versionName "3.2.4.1"
 
