--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,16 +88,16 @@
             android:name="org.apache.http.legacy"
             android:required="false" />
         <activity android:name=".activity.login.LogOffActivity"/>
-        <activity
-            android:name=".activity.OrderDetailsActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="portrait"
-            tools:ignore="Instantiatable,LockedOrientationActivity" />
-        <activity
-            android:name=".activity.OrderTrackingActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="portrait"
-            tools:ignore="Instantiatable,LockedOrientationActivity" />
+<!--        <activity-->
+<!--            android:name=".activity.OrderDetailsActivity"-->
+<!--            android:configChanges="orientation|keyboardHidden|screenSize"-->
+<!--            android:screenOrientation="portrait"-->
+<!--            tools:ignore="Instantiatable,LockedOrientationActivity" />-->
+<!--        <activity-->
+<!--            android:name=".activity.OrderTrackingActivity"-->
+<!--            android:configChanges="orientation|keyboardHidden|screenSize"-->
+<!--            android:screenOrientation="portrait"-->
+<!--            tools:ignore="Instantiatable,LockedOrientationActivity" />-->
 
         <receiver
             android:name=".wxapi.AppRegister"
@@ -238,69 +238,9 @@
             android:screenOrientation="unspecified"
             tools:ignore="Instantiatable,LockedOrientationActivity" />
 
-<!--        <activity-->
-<!--            android:name="com.cmic.sso.sdk.activity.OAuthActivity"-->
-<!--            android:configChanges="orientation|keyboardHidden|screenSize"-->
-<!--            android:launchMode="singleTop"-->
-<!--            android:screenOrientation="unspecified"-->
-<!--            tools:ignore="MissingClass" /> &lt;!&ndash; required &ndash;&gt;-->
-<!--        <activity-->
-<!--            android:name="com.cmic.sso.sdk.activity.LoginAuthActivity"-->
-<!--            android:configChanges="orientation|keyboardHidden|screenSize"-->
-<!--            android:launchMode="singleTop"-->
-<!--            android:screenOrientation="unspecified"-->
-<!--            android:theme="@style/ActivityDialogStyleaa" /> &lt;!&ndash; Required &ndash;&gt;-->
-<!--        <activity-->
-<!--            android:name="cn.jiguang.verifysdk.CtLoginActivity"-->
-<!--            android:configChanges="orientation|keyboardHidden|screenSize"-->
-<!--            android:launchMode="singleTop"-->
-<!--            android:screenOrientation="unspecified"-->
-<!--            android:theme="@style/ActivityDialogStyleaa" /> &lt;!&ndash; Required &ndash;&gt;-->
-
-        <meta-data
-            android:name="JPUSH_APPKEY"
-            android:value="${JPUSH_APPKEY}" /> <!-- </>值来自开发者平台取得的AppKey -->
-        <meta-data
-            android:name="JPUSH_CHANNEL"
-            android:value="${JPUSH_CHANNEL}" />
-
         <service
             android:name="com.amap.api.location.APSService"
             android:foregroundServiceType="location" />
-
-<!--        <service-->
-<!--            android:name="com.qq.e.comm.DownloadService"-->
-<!--            android:exported="false" >-->
-<!--        </service>-->
-<!--        <activity-->
-<!--            android:name="com.qq.e.ads.ADActivity"-->
-<!--            android:configChanges="keyboard|keyboardHidden|orientation|screenSize" >-->
-<!--        </activity>-->
-<!--        &lt;!&ndash; 腾讯广告 &ndash;&gt;-->
-<!--        <provider-->
-<!--            android:name="com.qq.e.comm.GDTFileProvider"-->
-<!--            android:authorities="${applicationId}.gdt.fileprovider"-->
-<!--            android:exported="false"-->
-<!--            android:grantUriPermissions="true">-->
-<!--            <meta-data-->
-<!--                android:name="android.support.FILE_PROVIDER_PATHS"-->
-<!--                android:resource="@xml/gdt_file_path" />-->
-<!--        </provider>-->
-
-<!--        &lt;!&ndash; 穿山甲广告 &ndash;&gt;-->
-<!--        <provider-->
-<!--            android:name="com.bytedance.sdk.openadsdk.TTFileProvider"-->
-<!--            android:authorities="${applicationId}.TTFileProvider"-->
-<!--            android:exported="false"-->
-<!--            android:grantUriPermissions="true">-->
-<!--            <meta-data-->
-<!--                android:name="android.support.FILE_PROVIDER_PATHS"-->
-<!--                android:resource="@xml/file_paths" />-->
-<!--        </provider>-->
-<!--        <provider-->
-<!--            android:name="com.bytedance.sdk.openadsdk.multipro.TTMultiProvider"-->
-<!--            android:authorities="${applicationId}.TTMultiProvider"-->
-<!--            android:exported="false" />-->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
