--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,16 +23,10 @@ android {
         targetSdk 31
         versionCode 8
         versionName "1.0.7"
-//        ndk {
-//            //选择要添加的对应 cpu 类型的 .so 库。
-//            abiFilters  'armeabi-v8a', 'armeabi', 'armeabi-v7a'
-//        }
-//        manifestPlaceholders = [
-//                JPUSH_PKGNAME : applicationId,
-//                JPUSH_APPKEY : "ac1ce55e64a147f973e57d58", //Portal上注册的包名对应的 appKey.
-//                JPUSH_CHANNEL : "developer-default", //暂时填写默认值即可.
-//        ]
-
+        ndk {
+            //选择要添加的对应 cpu 类型的 .so 库。
+            abiFilters  'arm64-v8a', 'armeabi', 'armeabi-v7a'
+        }
         multiDexEnabled true
 
         renderscriptTargetApi 17
