屏蔽权限检测库，屏蔽相关代码。修正APP检测病毒问题

--- a/settings.gradle
+++ b/settings.gradle
@@ -23,4 +23,4 @@ include ':GroupAdapter'
 include ':form_verify'
 include ':FlycoTabLayout_Lib'
 include ':library_update'
-include ':permissionx'
+//include ':permissionx'
