--- a/app/build.gradle
+++ b/app/build.gradle
@@ -156,7 +156,7 @@ dependencies {
     implementation "com.squareup.leakcanary:leakcanary-android-no-op:1.5.4"
 
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.24'
-    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:5.5.8'
+    implementation 'com.tencent.mm.opensdk:wechat-sdk-android:+'
 
     implementation "com.tencent.bugly:crashreport:latest.release"//腾讯异常上报
     implementation "com.tencent.bugly:nativecrashreport:latest.release"//腾讯异常上报
