--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@ android.injected.testOnly=false
 #org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 android.useAndroidX=true
 android.enableJetifier=true
+android.useDeprecatedNdk=true
