--- a/settings.gradle
+++ b/settings.gradle
@@ -4,7 +4,7 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         jcenter() // Warning: this repository is going to shut down soon
-        maven { url 'https://jitpack.io' }
+        maven { url 'https://www.jitpack.io'}
 //        maven {
 //            allowInsecureProtocol = true
 //            url 'http://repo.baichuan-android.taobao.com/content/groups/BaichuanRepositories/'
