--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'org.jetbrains.kotlin.android'
 }
 
 def isWindows() {
@@ -135,6 +136,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -162,14 +164,14 @@ dependencies {
     implementation "com.tencent.bugly:crashreport:latest.release"//腾讯异常上报
     implementation "com.tencent.bugly:nativecrashreport:latest.release"//腾讯异常上报
 
-    implementation  'com.scwang.smart:refresh-layout-kernel:2.0.1'      //核心必须依赖
-    implementation  'com.scwang.smart:refresh-header-classics:2.0.1'    //经典刷新头
+    implementation  'io.github.scwang90:refresh-layout-kernel:2.0.5'      //核心必须依赖
+    implementation  'io.github.scwang90:refresh-header-classics:2.0.5'    //经典刷新头
 //    implementation  'com.scwang.smart:refresh-header-radar:2.0.1'       //雷达刷新头
 //    implementation  'com.scwang.smart:refresh-header-falsify:2.0.1'     //虚拟刷新头
 //    implementation  'com.scwang.smart:refresh-header-material:2.0.1'    //谷歌刷新头
 //    implementation  'com.scwang.smart:refresh-header-two-level:2.0.1'   //二级刷新头
 //    implementation  'com.scwang.smart:refresh-footer-ball:2.0.1'        //球脉冲加载
-    implementation  'com.scwang.smart:refresh-footer-classics:2.0.1'    //经典加载
+    implementation  'io.github.scwang90:refresh-footer-classics:2.0.5'    //经典加载
 
     implementation project(':banner')
     implementation project(path: ':utils')
